--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -14,7 +14,7 @@
                     <h4 class="alert-heading mb-3">Error</h4>
                     <p class="mb-3">{{ error }}</p>
                     <hr>
-                    <a href="{{ url_for('password_recover') }}" class="btn btn-primary">
+                    <a href="/password_recover" class="btn btn-primary">
                         Request New Password Reset
                     </a>
                 </div>
