--- a/app/templates/company_register.html
+++ b/app/templates/company_register.html
@@ -6,7 +6,7 @@
     <title>Company Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="company_register.css">
+    <link rel="stylesheet" href="static/company_register.css">
 
     <!--Link per select2 per mappe-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
@@ -177,7 +177,7 @@
                 placeholder: "Search for a country",
                 minimumInputLength: 1,
                 ajax: {
-                    url: '/get_countries',
+                    url: '/get_countries',  // Aggiornato percorso
                     dataType: 'json',
                     delay: 250,
                     data: function (params) {
@@ -209,7 +209,7 @@
                 if (countryCode) {
                     // Richiesta AJAX per ottenere le città per il nuovo paese
                     $.ajax({
-                        url: '/get_cities',
+                        url: '/get_cities',  // Aggiornato percorso
                         method: 'GET',
                         data: {
                             country_code: countryCode
@@ -285,7 +285,7 @@
                     formData.append('logo', logoFile);
                 }
 
-                fetch('/company_register', {
+                fetch('/company_register', {  // Aggiornato percorso
                     method: 'POST',
                     body: formData
                 })
