--- a/app/templates/information_company.html
+++ b/app/templates/information_company.html
@@ -6,7 +6,7 @@
     <title>Company Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="information_company.css">
+    <link rel="stylesheet" href="static/information_company.css">
 </head>
 <body>
     <header class="sticky-top">
