--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="static/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -27,7 +27,7 @@
             <div class="d-flex align-items-center">
                 {% if user_id %}
                 <a class="btn btn-primary" href="/">Home</a>
-                <a class="btn btn-primary btn-profile ms-2" href="/profile"><i class="bi bi-person-circle"></i></a>
+                <a class="btn btn-primary btn-profile ms-2" href="/user_profile"><i class="bi bi-person-circle"></i></a>
                 {% else %}
                 <a class="btn btn-primary ms-2" href="/register">Sign in</a>
                 {% endif %}
