--- a/app/templates/password_recover.html
+++ b/app/templates/password_recover.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recover Password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="static/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
@@ -76,7 +76,7 @@
         
         const formData = new FormData(this);
         
-        fetch('/password_recover', {
+        fetch('/password_recover', {  // Aggiornato il percorso
             method: 'POST',
             body: formData
         })
