--- a/app/templates/password_recover_2.html
+++ b/app/templates/password_recover_2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Change Password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="static/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
@@ -130,7 +130,7 @@
         const token = document.getElementById('resetToken').value;
         const email = document.getElementById('userEmail').value;
         
-        fetch('/password_recover_2/' + token, {
+        fetch('/password_recover_2/' + token, {  // Aggiornato il percorso
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
