--- a/app/templates/includes/user_menu.html
+++ b/app/templates/includes/user_menu.html
@@ -43,7 +43,7 @@
             <i class="bi bi-bell me-2"></i>Manage Company
             <span class="badge bg-danger">3</span>
         </a></li>
-        <li><a class="dropdown-item text-dark" href="/company_admin/employee">
+        <li><a class="dropdown-item text-dark" href="/manage_employee">
             <i class="bi bi-person-x me-2"></i>Manage Employee
         </a></li>
         <li><a class="dropdown-item text-dark" href="/company_admin/token">
