--- a/app/templates/includes/user_menu.html
+++ b/app/templates/includes/user_menu.html
@@ -39,7 +39,7 @@
         <li><a class="dropdown-item text-dark" href="/company_admin/notifications">
             <i class="bi bi-building-x me-2"></i>Notifications
         </a></li>
-        <li><a class="dropdown-item text-dark" href="/company_admin/company">
+        <li><a class="dropdown-item text-dark" href="/companies_of_administrator">
             <i class="bi bi-bell me-2"></i>Manage Company
             <span class="badge bg-danger">3</span>
         </a></li>
