--- a/app/templates/manage_employee.html
+++ b/app/templates/manage_employee.html
@@ -59,6 +59,7 @@
                                     <tr>
                                         <th>Name</th>
                                         <th>Surname</th>
+                                        <th>Company</th>
                                         <th>Email</th>
                                         <th>Phone Number</th>
                                         <th>Actions</th>
